# INST798-808-Triangulation-of-AIPsychology

./: .env.example  .gitignore  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_CN.md  main.py  pyproject.toml  test_api.py
config/: tasks.json
data/: liwc22_results.xlsx
data/analysis/: alignment_results_bfi.csv  alignment_results_liwc.csv  alignment_summary.txt  analysis_summary.txt  merged_data.csv  rq1_model_comparison.csv  rq2_mediation_summary.csv  rq3_liwc_behavior_correlations.csv
data/for_liwc/: readme.txt
data/for_liwc/example_csv/: gpt3.5_turbo_0613_liwc.csv
data/for_liwc/stories/stories_google_gemini-2.5-flash-lite/: google_gemini-2.5-flash-lite_p11.txt  google_gemini-2.5-flash-lite_p12.txt  google_gemini-2.5-flash-lite_p14.txt  google_gemini-2.5-flash-lite_p17.txt  google_gemini-2.5-flash-lite_p19.txt  google_gemini-2.5-flash-lite_p2.txt  google_gemini-2.5-flash-lite_p20.txt  google_gemini-2.5-flash-lite_p21.txt  google_gemini-2.5-flash-lite_p22.txt  google_gemini-2.5-flash-lite_p29.txt  (+5 more)
data/inputs/: dilemmas.json  iat_stimuli.json  norm300_syn.csv  personas.json  personas_test.json  risk_scenarios.json  writing_prompt.txt
notebooks/: smoke_test.ipynb
scripts/: check_progress.py  create_test_personas.py  fix_figures.py  prepare_analysis_data.py  regenerate_all_figures.py  regenerate_final_figures.py  regenerate_remaining_figures.py  rerun_bfi_preserve.py  rerun_sycophancy.py  run_mediation_analysis.py  run_regression_analysis.py  run_stage1_behaviors.py  run_stage2_stories.py
src/: .gitignore  api.py  behavior_gen.py  story_gen.py
(+490 files in other folders)
